# schema-util

./: .gitignore  Cargo.toml  README.md  test.json
.github/workflows/: tests.yml
src/: lib.rs  main.rs  model.rs  traits.rs
