[package]
name = "schema-util"
version = "0.0.1"
edition = "2021"
authors = [
    "Proudmuslim <proudmuslim-dev@protonmail.com>",
]
description = """
(WIP) A slightly cursed utility for converting GitHub's schema JSONs into Rust structs.
"""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.1.18", features = ["derive"] }
serde = { version = "^1", features = ["derive"] }
serde_json = "1.0.81"
strum_macros = "0.23"
strum = "0.24.0"
